fixed btn on small screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,3 +25,7 @@
 .text-color{
     color: #FFFFFF;
 }
+
+.btn-modal {
+    margin: 10px;
+}
